--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,13 +1705,47 @@
     "\n",
     "    def create_stop_loss_order(self, symbol: str, side: str, stop_loss_price: float) -> dict:\n",
     "        \"\"\"Create a stop-loss order.\"\"\"\n",
+    "        # Fetch symbol information\n",
     "        symbol_info = self.get_symbol_info(symbol)\n",
     "        if not symbol_info:\n",
     "            logging.error(f\"Failed to fetch symbol info for {symbol}.\")\n",
     "            return None\n",
     "\n",
-    "        # Get tick size for stopPrice\n",
-    "        tick_size = float(next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]))[\"tickSize\"])\n",
+    "        # Fetch the current mark price\n",
+    "        mark_price_response = self.get_mark_price(symbol)\n",
+    "        if not mark_price_response:\n",
+    "            logging.error(f\"Failed to fetch mark price for {symbol}.\")\n",
+    "            return None\n",
+    "\n",
+    "        mark_price = float(mark_price_response[\"markPrice\"])\n",
+    "\n",
+    "        # Get the price filter for the symbol\n",
+    "        price_filter = next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]), None)\n",
+    "        if not price_filter:\n",
+    "            logging.error(f\"Price filter not found for {symbol}.\")\n",
+    "            return None\n",
+    "\n",
+    "        tick_size = float(price_filter[\"tickSize\"])  # Minimum price increment\n",
+    "        min_price_distance = float(price_filter.get(\"minPrice\", tick_size))  # Minimum distance for stopPrice\n",
+    "\n",
+    "        # Calculate the minimum allowed stop price\n",
+    "        if side == \"SELL\":\n",
+    "            # For SELL positions, stopPrice must be BELOW the mark price\n",
+    "            min_stop_price = mark_price - min_price_distance\n",
+    "            if stop_loss_price >= mark_price:\n",
+    "                logging.error(f\"Stop price {stop_loss_price} must be below the mark price {mark_price}.\")\n",
+    "                return None\n",
+    "        else:\n",
+    "            # For BUY positions, stopPrice must be ABOVE the mark price\n",
+    "            min_stop_price = mark_price + min_price_distance\n",
+    "            if stop_loss_price <= mark_price:\n",
+    "                logging.error(f\"Stop price {stop_loss_price} must be above the mark price {mark_price}.\")\n",
+    "                return None\n",
+    "\n",
+    "        # Ensure the stopPrice meets the minimum distance requirement\n",
+    "        if (side == \"SELL\" and stop_loss_price > min_stop_price) or (side == \"BUY\" and stop_loss_price < min_stop_price):\n",
+    "            logging.warning(f\"Adjusting stop price to meet minimum distance requirement.\")\n",
+    "            stop_loss_price = min_stop_price\n",
     "\n",
     "        # Format stopPrice to adhere to tick size and round to 2 decimal places\n",
     "        formatted_stop_loss_price = round(stop_loss_price / tick_size) * tick_size\n",
@@ -1725,8 +1759,12 @@
     "            \"stopPrice\": formatted_stop_loss_price,  # Formatted stop price\n",
     "            \"closePosition\": True,  # Close the entire position\n",
     "            \"workingType\": \"MARK_PRICE\",  # Use mark price for stopPrice\n",
-    "            \"priceProtect\": True  # Enable price protection\n",
+    "            \"priceProtect\": True,  # Enable price protection\n",
+    "            \"timestamp\": int(time.time() * 1000),  # Add timestamp for signed requests\n",
     "        }\n",
+    "\n",
+    "        # Generate signature for signed requests\n",
+    "        params[\"signature\"] = self._generate_signature(params)\n",
     "\n",
     "        logging.info(f\"Creating stop-loss order with params: {params}\")\n",
     "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
@@ -1844,7 +1882,114 @@
     "            \"timestamp\": int(time.time() * 1000)\n",
     "        }\n",
     "        params[\"signature\"] = self._generate_signature(params)\n",
-    "        return self._send_request(\"GET\", endpoint, params=params)"
+    "        return self._send_request(\"GET\", endpoint, params=params)\n",
+    "\n",
+    "    def create_trailing_stop_order(\n",
+    "        self,\n",
+    "        symbol: str,\n",
+    "        side: str,\n",
+    "        quantity: float,\n",
+    "        activation_price: float,\n",
+    "        callback_rate: float,\n",
+    "        reduce_only: bool = True\n",
+    "    ) -> dict:\n",
+    "        \"\"\"\n",
+    "        Create a trailing stop order for Binance Futures.\n",
+    "\n",
+    "        :param symbol: The trading symbol (e.g., \"BTCUSDT\").\n",
+    "        :param side: The side of the order (\"BUY\" or \"SELL\").\n",
+    "        :param quantity: The quantity of the asset to trade.\n",
+    "        :param activation_price: The price at which the trailing stop becomes active.\n",
+    "        :param callback_rate: The callback rate for the trailing stop (e.g., 1.0 for 1%).\n",
+    "        :param reduce_only: Whether the order should only reduce the position (default: True).\n",
+    "        :return: The response from the Binance API.\n",
+    "        \"\"\"\n",
+    "        order_type = \"TRAILING_STOP_MARKET\"\n",
+    "        params = {\n",
+    "            \"symbol\": symbol,\n",
+    "            \"side\": side,\n",
+    "            \"type\": order_type,\n",
+    "            \"quantity\": quantity,\n",
+    "            \"activationPrice\": activation_price,\n",
+    "            \"callbackRate\": callback_rate,\n",
+    "            \"reduceOnly\": reduce_only,\n",
+    "            \"workingType\": \"MARK_PRICE\",  # Use mark price for activation\n",
+    "            \"priceProtect\": True  # Enable price protection\n",
+    "        }\n",
+    "\n",
+    "        logging.info(f\"Creating trailing stop order with params: {params}\")\n",
+    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "\n",
+    "    def create_order_with_trailing_stop(\n",
+    "        self,\n",
+    "        symbol: str,\n",
+    "        side: str,\n",
+    "        order_type: str,\n",
+    "        quantity: float,\n",
+    "        price: float = None,\n",
+    "        reduce_only: bool = False,\n",
+    "        time_in_force: str = None,\n",
+    "        stop_price: float = None,\n",
+    "        activation_price: float = None,\n",
+    "        callback_rate: float = None\n",
+    "    ) -> dict:\n",
+    "        \"\"\"\n",
+    "        Create a new order with a trailing stop loss.\n",
+    "\n",
+    "        :param symbol: The trading symbol (e.g., \"BTCUSDT\").\n",
+    "        :param side: The side of the order (\"BUY\" or \"SELL\").\n",
+    "        :param order_type: The type of order (e.g., \"MARKET\", \"LIMIT\").\n",
+    "        :param quantity: The quantity of the asset to trade.\n",
+    "        :param price: The price for limit orders (optional).\n",
+    "        :param reduce_only: Whether the order should only reduce the position (default: False).\n",
+    "        :param time_in_force: Time in force for limit orders (e.g., \"GTC\", \"IOC\").\n",
+    "        :param stop_price: The stop price for stop orders (optional).\n",
+    "        :param activation_price: The activation price for the trailing stop.\n",
+    "        :param callback_rate: The callback rate for the trailing stop (e.g., 1.0 for 1%).\n",
+    "        :return: The response from the Binance API.\n",
+    "        \"\"\"\n",
+    "        # Create the initial order\n",
+    "        params = {\n",
+    "            \"symbol\": symbol,\n",
+    "            \"side\": side,\n",
+    "            \"type\": order_type,\n",
+    "            \"quantity\": quantity,\n",
+    "            \"reduceOnly\": reduce_only,\n",
+    "        }\n",
+    "\n",
+    "        if price:\n",
+    "            params[\"price\"] = price\n",
+    "\n",
+    "        if stop_price:\n",
+    "            params[\"stopPrice\"] = stop_price\n",
+    "\n",
+    "        if order_type == \"LIMIT\" and time_in_force:\n",
+    "            params[\"timeInForce\"] = time_in_force\n",
+    "\n",
+    "        # Send the initial order\n",
+    "        response = self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "\n",
+    "        if response is None:\n",
+    "            logging.error(\"Failed to create the initial order.\")\n",
+    "            return None\n",
+    "\n",
+    "        # If the initial order is successful, create the trailing stop order\n",
+    "        if activation_price and callback_rate:\n",
+    "            trailing_stop_response = self.create_trailing_stop_order(\n",
+    "                symbol=symbol,\n",
+    "                side=\"SELL\" if side == \"BUY\" else \"BUY\",  # Opposite side for trailing stop\n",
+    "                quantity=quantity,\n",
+    "                activation_price=activation_price,\n",
+    "                callback_rate=callback_rate,\n",
+    "                reduce_only=True\n",
+    "            )\n",
+    "\n",
+    "            if trailing_stop_response:\n",
+    "                logging.info(f\"Trailing stop order created: {trailing_stop_response}\")\n",
+    "            else:\n",
+    "                logging.error(\"Failed to create trailing stop order.\")\n",
+    "\n",
+    "        return response"
    ]
   },
   {
@@ -1854,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +2021,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1737868977014}\n"
+      "Server Time: {'serverTime': 1738729560824}\n"
      ]
     }
    ],
@@ -1892,14 +2037,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24162.77258759', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24399.27801032', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '33.71882537', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.95843646', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22141907', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24863.69203081', 'crossWalletBalance': '24863.69203081', 'crossUnPnl': '-2.28000000', 'availableBalance': '24421.23514056', 'maxWithdrawAmount': '24421.23514056', 'marginAvailable': True, 'updateTime': 1737868527018}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24416.40499053', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24848.88469577', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '25077.04746394', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '41.56378450', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '8.78222662', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.24387135', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '25122.94060174', 'crossWalletBalance': '25122.94060174', 'crossUnPnl': '-0.05600000', 'availableBalance': '25099.61466830', 'maxWithdrawAmount': '25099.61466830', 'marginAvailable': True, 'updateTime': 1738727068332}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '25109.28915306', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -1914,50 +2059,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Order Response: {'orderId': 94669345602, 'symbol': 'SOLUSDT', 'status': 'NEW', 'clientOrderId': '3fRq0tAQQJnppdubEEWj4S', 'price': '0.0000', 'avgPrice': '0.00', 'origQty': '1', 'executedQty': '0', 'cumQty': '0', 'cumQuote': '0.0000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'SELL', 'positionSide': 'BOTH', 'stopPrice': '0.0000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1737869849753}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'orderId': 18072783378,\n",
+       " 'symbol': 'SUIUSDT',\n",
+       " 'status': 'NEW',\n",
+       " 'clientOrderId': 'buu30Fegb5vwOrXWMtPVGL',\n",
+       " 'price': '0.000000',\n",
+       " 'avgPrice': '0.00',\n",
+       " 'origQty': '5.0',\n",
+       " 'executedQty': '0.0',\n",
+       " 'cumQty': '0.0',\n",
+       " 'cumQuote': '0.0000000',\n",
+       " 'timeInForce': 'GTC',\n",
+       " 'type': 'MARKET',\n",
+       " 'reduceOnly': False,\n",
+       " 'closePosition': False,\n",
+       " 'side': 'BUY',\n",
+       " 'positionSide': 'BOTH',\n",
+       " 'stopPrice': '0.000000',\n",
+       " 'workingType': 'CONTRACT_PRICE',\n",
+       " 'priceProtect': False,\n",
+       " 'origType': 'MARKET',\n",
+       " 'priceMatch': 'NONE',\n",
+       " 'selfTradePreventionMode': 'EXPIRE_MAKER',\n",
+       " 'goodTillDate': 0,\n",
+       " 'updateTime': 1738729645077}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "order_response = binance_api.create_order('SOLUSDT', \"SELL\", \"MARKET\", 1,take_profit_percentage= 2, stop_loss_percentage= -1.5)\n",
-    "print(\"Order Response:\", order_response)"
+    "binance_api.create_order_with_trailing_stop(\"SUIUSDT\", \"BUY\", \"MARKET\", 5, activation_price=3.69, callback_rate=1.5)\n",
+    "# binance_api.create_stop_loss_order(\"SUIUSDT\", \"SELL\", 3.58)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fetch position risk information\n",
-    "position_risk = binance_api.get_position_risk('SOLUSDT')\n",
-    "\n",
-    "position_amt = float(position_risk[0]['positionAmt'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-1.0\n"
+      "ERROR:root:API request failed: 400 Client Error: Bad Request for url: https://fapi.binance.com/fapi/v1/order?symbol=SUIUSDT&side=BUY&type=STOP_MARKET&stopPrice=3.3&closePosition=True&workingType=MARK_PRICE&priceProtect=True&timestamp=1738729677702&signature=968935c84a5f45e6afb525178e9030a00bedab2ca022b569b62010c881060775\n",
+      "ERROR:root:Response: {\"code\":-1022,\"msg\":\"Signature for this request is not valid.\"}\n"
      ]
     }
    ],
    "source": [
-    "close_position_coin_amount = float(binance_api.get_position_risk('SOLUSDT')[0]['positionAmt'])\n",
-    "print(close_position_coin_amount)"
+    "binance_api.create_stop_loss_order(\"SUIUSDT\", \"SELL\", 3.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mark_price' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMark price: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmark_price\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Min stop price: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmin_stop_price\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mark_price' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Mark price: {mark_price}, Min stop price: {min_stop_price}\")"
    ]
   },
   {
@@ -3039,9 +3219,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (my-venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "my-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
