--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,13 +1999,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace these with your testnet credentials\n",
-    "API_KEY = \"TGZ6PvNeQc3c3ctlzm0UOdkgr1fi5oEMMPXDK9Dns51VXGKYGIirlOJ8de5TYNRC\"\n",
-    "API_SECRET = \"Ng4YmUDDzq7W9l5F08qcY3Qq2OXms4xE7A9nlslDIxP2agjVWqmZbOOxCRTZEHOl\"\n",
+    "# API_KEY = \"TGZ6PvNeQc3c3ctlzm0UOdkgr1fi5oEMMPXDK9Dns51VXGKYGIirlOJ8de5TYNRC\"\n",
+    "# API_SECRET = \"Ng4YmUDDzq7W9l5F08qcY3Qq2OXms4xE7A9nlslDIxP2agjVWqmZbOOxCRTZEHOl\"\n",
+    "\n",
+    "API_KEY = \"BtOI5XmnTIKHo6goUl08IgGRUGnZyAPx3ulURUATuE3eY8Csvy15EemQWhnQXWvC\"\n",
+    "API_SECRET = \"7hK4qNnOr9hPO5FCbzeiRF9S07rvg9fgM1SmDnGHBnyfq2sFRiYUSnqsD4qn5iEk\"\n",
     "\n",
     "# Instantiate BinanceAPI for Testnet\n",
     "binance_api = BinanceAPI(api_key=API_KEY, api_secret=API_SECRET, testnet=False)"
@@ -2013,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2024,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1738729560824}\n"
+      "Server Time: {'serverTime': 1740632555397}\n"
      ]
     }
    ],
@@ -2037,14 +2040,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24848.88469577', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '25077.04746394', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '41.56378450', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '8.78222662', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.24387135', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '25122.94060174', 'crossWalletBalance': '25122.94060174', 'crossUnPnl': '-0.05600000', 'availableBalance': '25099.61466830', 'maxWithdrawAmount': '25099.61466830', 'marginAvailable': True, 'updateTime': 1738727068332}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '25109.28915306', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'USDT', 'balance': '1000.00000000', 'crossWalletBalance': '1000.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '1000.00000000', 'maxWithdrawAmount': '1000.00000000', 'marginAvailable': True, 'updateTime': 1740630429892}, {'accountAlias': 'fWsRSgSgFzmYXqXq', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00000000', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -3204,17 +3207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Computer Name is:ip-172-31-31-7\n",
+      "Your Computer IP Address is:172.31.31.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "# Python Program to Get IP Address\n",
+    "import socket\n",
+    "hostname = socket.gethostname()\n",
+    "IPAddr = socket.gethostbyname(hostname)\n",
+    "print(\"Your Computer Name is:\" + hostname)\n",
+    "print(\"Your Computer IP Address is:\" + IPAddr)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "api key : BtOI5XmnTIKHo6goUl08IgGRUGnZyAPx3ulURUATuE3eY8Csvy15EemQWhnQXWvC\n",
+    "secret key : 7hK4qNnOr9hPO5FCbzeiRF9S07rvg9fgM1SmDnGHBnyfq2sFRiYUSnqsD4qn5iEk"
+   ]
   }
  ],
  "metadata": {
